# wt-campaign-indexer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/dummy_campaign/: campaign_summary.md
examples/dummy_campaign/FST1339/: FST_1339.json  FST_1339.lvm  FST_1339_manifest.json
examples/dummy_campaign/FST1339/ir/run/: run.hcc
examples/dummy_campaign/FST1339/schlieren/run_S0001/: run_S0001.cihx  run_S0001000001.tif  run_S0001000002.tif  run_S0001000003.tif  run_S0001000004.tif  run_S0001000005.tif  run_S0001000006.tif  run_S0001000007.tif  run_S0001000008.tif  run_S0001000009.tif  run_S0001000010.tif  run_S0001000011.tif
examples/dummy_campaign/FST1339/schlieren/scale_S0001/: scale_S0001.cihx  scale_S0001000001.tif  scale_S0001000002.tif  scale_S0001000003.tif  scale_S0001000004.tif  scale_S0001000005.tif  scale_S0001000006.tif  scale_S0001000007.tif  scale_S0001000008.tif  scale_S0001000009.tif  scale_S0001000010.tif  scale_S0001000011.tif
examples/dummy_campaign/FST1388/: FST_1388.json  FST_1388.lvm  FST_1388_manifest.json
examples/dummy_campaign/FST1391/: FST_1391.json  FST_1391.lvm  FST_1391_manifest.json  README.md
examples/dummy_campaign/FST870/: FST_0870_manifest.json  FST_870.json  FST_870.lvm
src/wtt_campaign_indexer/: __init__.py  cli.py  discovery.py  lvm_conditions.py  lvm_fixture.py  manifest.py  manifest_cli.py  plot_cli.py
tests/: test_detection.py  test_discovery.py  test_fixture_writer.py  test_lvm_reading.py  test_manifest.py  test_manifest_cli.py
tests/fixtures/: sample_input.lvm
(+85 files in other folders)
