[project]
name = "wt-campaign-indexer"
version = "0.1.0"
description = "Tooling for creating wind tunnel campaign fixtures and indexes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
]

[project.optional-dependencies]
dev = [
  "black>=24.0",
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
wtt-make-lvm-fixture = "wtt_campaign_indexer.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
